--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@biomejs/biome": "1.8.3"
+    "@biomejs/biome": "1.8.3",
+    "@tsconfig/node20": "20.1.4",
+    "typescript": "5.5.4"
+  },
+  "dependencies": {
+    "@types/node": "22.5.4"
   }
 }
