TypeScriptのビルド環境を整備

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsup",
+    "start": "node ./dist/index.mjs",
     "format": "biome format --write ./src"
   },
   "keywords": [],
@@ -13,6 +15,7 @@
     "@biomejs/biome": "1.8.3",
     "@tsconfig/node20": "20.1.4",
     "prisma": "5.19.1",
+    "tsup": "8.2.4",
     "typescript": "5.5.4"
   },
   "dependencies": {
