クライアントのベースを作成

--- a/package.json
+++ b/package.json
@@ -2,27 +2,33 @@
   "name": "app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "bin": "./dist/index.mjs",
   "scripts": {
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/index.ts",
-    "build": "tsup",
-    "start": "node ./dist/index.mjs",
+    "dev": "tsx watch src/index.ts",
+    "start": "tsx src/index.ts",
     "format": "biome format --write ./src"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "ts-node": {
+    "esm": true
+  },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
     "@tsconfig/node20": "20.1.4",
     "nodemon": "3.1.4",
     "prisma": "5.19.1",
-    "ts-node": "10.9.2",
+    "tsconfig-paths": "4.2.0",
     "tsup": "8.2.4",
+    "tsx": "4.19.0",
     "typescript": "5.5.4"
   },
   "dependencies": {
     "@prisma/client": "5.19.1",
-    "@types/node": "22.5.4"
+    "@types/node": "22.5.4",
+    "discord.js": "14.16.1",
+    "valibot": "0.41.0"
   }
 }
