--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,10 +1,10 @@
 {
 	"$schema": "https://json.schemastore.org/tsconfig",
-	"extends": "@tsconfig/node20/tsconfig.json",
+	"extends": "@packages/tsconfig/tsconfig.base.json",
 	"files": ["src/index.ts"],
 	"compilerOptions": {
 		"module": "es2022",
-		"moduleResolution": "Node",
+		"moduleResolution": "Bundler",
 		"lib": ["ES2023", "DOM"],
 		"rootDir": "./src",
 		"outDir": "./dist",
