--- a/turbo.json
+++ b/turbo.json
@@ -13,6 +13,25 @@
 		},
 		"check-types": {
 			"dependsOn": ["^check-types"]
+		},
+		"db:migrate:deploy": {
+			"outputs": []
+		},
+		"db:migrate:dev": {
+			"outputs": []
+		},
+		"db:push": {
+			"outputs": []
+		},
+		"db:seed": {
+			"outputs": [],
+			"cache": false
+		},
+		"db:migrate:force": {
+			"outputs": []
+		},
+		"generate": {
+			"dependsOn": ["^generate"]
 		}
 	}
 }
