--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "turbo dev",
     "fix": "turbo fix",
-    "format": "turbo format"
+    "format": "turbo format",
+    "db:push": "turbo run db:push",
+    "generate": "turbo run generate"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
+    "dotenv-cli": "7.4.2",
     "turbo": "2.1.2",
     "typescript": "5.5.4"
   },
