--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,14 +1,22 @@
 {
-    "name": "@packages/db",
-    "main": "./src/index.ts",
-    "scripts": {
-        "fix": "biome lint --write ./src",
-        "format": "biome format --write ./src",
-        "check-types": "tsc --noEmit"
-    },
-    "dependencies": {
-        "prisma": "5.19.1",
-        "@prisma/client": "5.19.1",
-        "@packages/tsconfig": "workspace:*"
-    }
+  "name": "@packages/db",
+  "main": "./src/index.ts",
+  "scripts": {
+    "fix": "biome lint --write ./src",
+    "format": "run-s format:*",
+    "format:src": "biome format --write ./src",
+    "format:prisma": "pnpm with-env prisma format",
+    "check-types": "tsc --noEmit",
+    "db:migrate:deploy": "pnpm with-env prisma migrate deploy",
+    "db:migrate:dev": "pnpm with-env prisma migrate dev",
+    "db:push": "pnpm with-env prisma db push",
+    "generate": "pnpm with-env prisma generate",
+    "with-env": "dotenv -e ../../.env --"
+  },
+  "dependencies": {
+    "@packages/tsconfig": "workspace:*",
+    "@prisma/client": "5.19.1",
+    "npm-run-all": "4.1.5",
+    "prisma": "5.19.1"
+  }
 }
