コンテナにredisを追加

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 # Prismaで使用するPostgresのURL
 DATABASE_URL="postgresql://postgres:postgres@db:5432/postgres?schema=public"
+# redisの設定
+REDIS_HOST="redis"
+REDIS_PORT=6379
+REDIS_USERNAME="default"
+REDIS_PASSWORD=
 
 # Discordボット向けの設定
 DISCORD_TOKEN=
