--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     command: sleep infinity
     depends_on:
       - db
+      - redis
 
   db:
     image: postgres:latest
@@ -21,5 +22,16 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_DB: postgres
 
+  redis:
+    container_name: redis
+    image: redis:latest
+    restart: unless-stopped
+    ports:
+      - 6379:6379
+    volumes:
+      - redis-data:/data
+    entrypoint: redis-server --appendonly yes
+
 volumes:
   postgres-data:
+  redis-data:
