`discord.js`の依存関係をプロジェクトルートに移動

--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "pnpm": ">= 9 < 10",
     "node": ">= 20 < 21"
   },
-  "packageManager": "pnpm@9.10.0"
+  "packageManager": "pnpm@9.10.0",
+  "dependencies": {
+    "discord.js": "14.16.1"
+  }
 }
