Discordアカウントで認証する仕組みを追加

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,6 @@ DISCORD_TOKEN=
 DISCORD_CLIENT_ID=
 
 # Webダッシュボード向けの設定
-# DiscordアカウントでOAuthを行うためのURL
-DISCORD_OAURH2_URL=
+DOMAIN=localhost
+COOKIE_SECRET=s3cret
+DISCORD_CLIENT_SECRET=
